# meta-estimators-go-term-enrichment

./: .gitignore  main.py  pyproject.toml
notebook/: GO_Biological_Process_2025  creating-classes.ipynb  example-script.ipynb  making-sure-imports-work.ipynb  testing.ipynb
src/: ipf.py  meta.py  plotting.py
src/meta-estimators/: enrichr.py  ipf.py
