[project]
name = "meta-estimators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.6",
    "forestplot>=0.4.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pydeseq2>=0.5.4",
    "pymare>=0.0.10",
    "requests>=2.33.1",
    "scanpy>=1.12.1",
    "tqdm>=4.67.3",
]
